# osgQt

./: CMakeLists.txt  README.md  build_osgqt.sh
CMakeModules/: OsgMacroUtils.cmake
OpenSceneGraph_diffs/: README.md.txt  osg.diff
examples/: CMakeLists.txt
examples/osgQtWidget/: CMakeLists.txt  README.org  diLocalSetupParser.cc  diLocalSetupParser.h  diUtilities.cc  friendlyDialog.cpp  friendlyDialog.h  main.cpp  miSetupParser.cc  osgModelManager.cc  osgModelManager.h  osgqtwidgets.cpp  osgqtwidgets.h
examples/osgviewerQt/: CMakeLists.txt  osgviewerQt.cpp
packaging/ld.so.conf.d/: osgqt.conf
packaging/pkgconfig/: openscenegraph-osgQt.pc  openscenegraph-osgUtil.pc
rpm/: SMHI-osgqt.spec  build_rpm_osgqt.sh
scripts/: select_gpu.sh  startViewer.sh
src/: CMakeLists.txt
src/osgPlugins/: CMakeLists.txt
src/osgQt/: CMakeLists.txt  GraphicsWindowQt.cpp  QFontImplementation.cpp  QGraphicsViewAdapter.cpp  QWidgetImage.cpp
